# ticket_toy_server

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: auth.rs  config.rs  lib.rs  main.rs  movie.rs  request.rs  state.rs
src/config/: context.rs  mod.rs
src/errors/: mod.rs  movie.rs  user.rs
src/model/: item.rs  me_too.rs  mod.rs  movie.rs  my_collection.rs  post.rs  user.rs
src/service/: mod.rs  movie.rs  oauth.rs  user.rs
src/service/movie_api/: credits.rs  mod.rs  movie.rs  movie_list.rs  posters.rs
