[package]
name = "ticket_toy_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart", "macros"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
serde = { version = "*", features = ["derive"] }
dotenv = "*"
reqwest = { version = "*", features = ["json"] }
anyhow = "*"
tower = "*"
serde_json = "*"
serde_urlencoded = "*"
mongodb = { version = "2.7.0" }
jsonwebtoken = "9"
chrono = { version = "*", features = ["serde"] }
axum-valid = "*"
tower-http = { version = "*", features = ["cors", "validate-request"] }
validator = { version = "*", features = ["derive"] }
urlencoding = "*"